// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFF2EB",
      },
    ]
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "rowGap": 24,
              "width": "100%",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#000000",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View />
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly with android 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFF2EB",
      },
    ]
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "rowGap": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#000000",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View />
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly with large device and iphoneX 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFF2EB",
      },
    ]
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "rowGap": 24,
              "width": "100%",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#000000",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View />
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly with medium device and android 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFF2EB",
      },
    ]
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "rowGap": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#000000",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View />
</RNCSafeAreaView>
`;
